Feature: First Expresso Test has been add.

--- a/BookmarkReader/app/src/main/res/layout/activity_main.xml
+++ b/BookmarkReader/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent" android:id="@+id/drawerContentLayout">
         <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
