Fragment drafts has been added.

--- a/BookmarkReader/app/src/main/res/layout/activity_main.xml
+++ b/BookmarkReader/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent" android:id="@+id/drawerContentLayout">
-        <android.support.design.widget.AppBarLayout
+        <android.support.design.widget.AppBarLayout android:id="@+id/appbarlayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <android.support.v7.widget.Toolbar
@@ -18,6 +18,9 @@
                 android:layout_width="match_parent">
             </android.support.v7.widget.Toolbar>
         </android.support.design.widget.AppBarLayout>
+        <FrameLayout android:layout_below="@id/appbarlayout" android:id="@+id/main_view_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"></FrameLayout>
     </RelativeLayout>
 
     <LinearLayout
