--- a/BookmarkReader/app/src/main/res/layout/article_detail.xml
+++ b/BookmarkReader/app/src/main/res/layout/article_detail.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:background="@color/colorAccent"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent" android:layout_height="match_parent" android:background="#0000FF">
 
     <TextView
         android:text="Detail will be here.."
