--- a/BookmarkReader/app/src/main/res/layout/fragment_settings.xml
+++ b/BookmarkReader/app/src/main/res/layout/fragment_settings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
         <variable
             name="model"
@@ -7,8 +7,35 @@
         </variable>
     </data>
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:orientation="vertical" android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="0dp"
+        android:background="@color/colorLightContent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:background="@color/colorPrimary">
+           <de.hdodenhof.circleimageview.CircleImageView
+               android:layout_width="100dp"
+               android:layout_height="100dp"
+               android:layout_marginTop="@dimen/settings_horizontal_margin"
+               android:layout_marginLeft="@dimen/settings_horizontal_margin"
+               android:layout_centerInParent="true"
+               android:src="@drawable/grumpy_cat"
+               app:civ_border_width="2dp"
+               app:civ_border_color="@color/colorImageBorder"
+               />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/settings_vertical_margin"
+                android:layout_marginLeft="@dimen/settings_horizontal_margin"
+                android:text="@{model.userName}"
+                style="@style/settings_user_name"
+                />
+        </LinearLayout>
         <TextView
             android:id="@+id/settings_text_view" android:text="@{model.name}"
             android:layout_width="match_parent"
