--- a/BookmarkReader/app/src/main/res/values/colors.xml
+++ b/BookmarkReader/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#00695C</color>
+    <color name="colorLightContent">#FFFFFF</color>
+    <color name="colorImageBorder">#000000</color>
+    <color name="lightText">#FFFFFF</color>
 </resources>
