--- a/BookmarkReader/app/src/main/res/values/styles.xml
+++ b/BookmarkReader/app/src/main/res/values/styles.xml
@@ -4,8 +4,11 @@
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
     </style>
-
+    <style name="settings_user_name">
+        <item name="android:textColor">@color/lightText</item>
+        <item name="android:textSize">17dp</item>
+        <item name="android:textStyle">italic</item>
+        <item name="android:typeface">serif</item>
+    </style>
 </resources>
