--- a/BookmarkReader/app/src/main/res/layout/website_list_fragment.xml
+++ b/BookmarkReader/app/src/main/res/layout/website_list_fragment.xml
@@ -1,17 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
-<LinearLayout android:orientation="vertical"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <TextView
-        android:layout_width="match_parent" android:id="@+id/txt1"
-        android:layout_height="50dp" android:text="test 1" />
-    <TextView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/web_site_list_fragment"
         android:layout_width="match_parent"
-        android:layout_height="50dp" android:text="test 2" />
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="50dp" android:text="test 3" />
-</LinearLayout>
-</RelativeLayout>
+        android:layout_height="match_parent"
+        android:background="@color/colorPrimary">
+    </android.support.v7.widget.RecyclerView>
+</ScrollView>
