--- a/BookmarkReader/app/src/main/res/values/colors.xml
+++ b/BookmarkReader/app/src/main/res/values/colors.xml
@@ -4,4 +4,7 @@
     <color name="colorLightContent">#FFFFFF</color>
     <color name="colorImageBorder">#000000</color>
     <color name="lightText">#FFFFFF</color>
+    <color name="colorAccent">#FF4081</color>
+    <color name="list_delimeter">#000000</color>
+    <color name="colorListTitle">#5C6BC0</color>
 </resources>
