--- a/BookmarkReader/app/src/main/res/values/colors.xml
+++ b/BookmarkReader/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="colorAccent">#FF4081</color>
     <color name="list_delimeter">#000000</color>
     <color name="colorListTitle">#5C6BC0</color>
+    <color name="edittext_background">#FFFFFF</color>
 </resources>
