Squashed commit of the following:
commit 0fb59fa16e92e9f7d52b0babf8c0473bd390f760
Author: Davut Ozcan <davutozcan87@gmail.com>
Date:   Sun Aug 20 22:39:07 2017 +0300

    WeblistView loaded only once

commit dd32bb56253fa94b0698e110b69347e68b04e5e4
Author: Davut Ozcan <davutozcan87@gmail.com>
Date:   Sun Aug 20 01:46:14 2017 +0300

    Article Service async callback has been add.

    -Some refactorings applied
    -article service load done asyncronously now

commit 52415ab2715cb7db38e4d7885fc22062056d7992
Author: Davut Ozcan <davutozcan87@gmail.com>
Date:   Sat Aug 19 01:02:25 2017 +0300

    ArticlePage article assertion has been add

commit 567c3f989011dfc1b3f082cda4fd6e7d20a127be
Author: Davut Ozcan <davut.ozcan@ericsson.com>
Date:   Thu Aug 17 11:11:44 2017 +0300

    Espresso conflict resolved

commit 6934e124bc5dc54a2e71987924c26e19027959c6
Author: Davut Ozcan <davutozcan87@gmail.com>
Date:   Mon Aug 14 23:48:14 2017 +0300

    article service introduced, article detailview mvvm binding improved

commit a5e53833398c86af8723abeb94c2bcda4db26292
Author: Davut Ozcan <davutozcan87@gmail.com>
Date:   Mon Aug 14 22:05:34 2017 +0300

    article webview progress has been set

commit 1e77d7fbded821cbc7aa2d7662dad833fd99ef2f
Author: Davut Ozcan <davutozcan87@gmail.com>
Date:   Sun Aug 13 22:08:09 2017 +0300

    Article Detail View progress has been add

commit 41ca4c4d23bf8ab082c185b7df3eaf15b5dc22a6
Author: Davut Ozcan <davutozcan87@gmail.com>
Date:   Sun Aug 13 21:28:23 2017 +0300

    Article Detail View draft 1

commit 4edd4f76fa3fcd8ad484ad5130c90ae5d838dc41
Author: Davut Ozcan <davutozcan87@gmail.com>
Date:   Tue Aug 8 21:50:22 2017 +0300

    Article detail view first tests passed

commit 54f9ae008a6e845340445e2e00058c070f6fb3aa
Author: Davut Ozcan <davutozcan87@gmail.com>
Date:   Tue Aug 8 01:01:15 2017 +0300

    Article view draft 1

    -WebListView row element event handler introduced

commit c8d20e2de91194e5f2f2d3a183c2974979b42182
Merge: 2c87fbb 81bf4f

--- a/app/src/main/res/layout/row_data_view.xml
+++ b/app/src/main/res/layout/row_data_view.xml
@@ -3,7 +3,12 @@
     <data>
         <variable
             name="rowData"
-            type="com.codezilla.bookmarkreader.weblist.WebListRowModel"></variable>
+            type="com.codezilla.bookmarkreader.weblist.WebListRowModel">
+        </variable>
+        <variable
+            name="handler"
+            type="com.codezilla.bookmarkreader.weblist.WebListRowItemEventHandler">
+        </variable>
     </data>
     <android.support.constraint.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
@@ -12,6 +17,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/container"
         android:background="#FFFFFF"
+        android:onClick="@{()->handler.onItemSelected(rowData)}"
         >
         <android.support.constraint.Guideline
             android:layout_width="match_parent"
@@ -29,11 +35,10 @@
             android:id="@+id/thumbnail"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:scaleType="fitXY"
-            android:src="@drawable/circular_user"
+            android:scaleType="centerCrop"
             app:layout_constraintTop_toTopOf="@id/guidelineHorizontal"
             app:layout_constraintLeft_toRightOf="@id/guideline"
-
+            app:imageUrl="@{rowData.iconUrl}"
             />
         <TextView
             android:id="@+id/title"
