--- a/app/src/main/res/layout/website_list_fragment.xml
+++ b/app/src/main/res/layout/website_list_fragment.xml
@@ -1,11 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<layout
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <data >
+        <variable
+            name="model"
+            type="com.codezilla.bookmarkreader.weblist.WebListViewModel">
+        </variable>
+        <import type="android.view.View"/>
+    </data>
+<LinearLayout
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+    <ProgressBar
+        android:theme="@style/LinearProgress"
+        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        android:layout_marginTop="-7dp"
+        android:visibility="@{model.isBusy ? View.VISIBLE:View.GONE}"
+        />
     <android.support.v7.widget.RecyclerView
         android:id="@+id/web_site_list_fragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/colorPrimary">
     </android.support.v7.widget.RecyclerView>
-</ScrollView>
+</LinearLayout>
+    </layout>
