--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="list_delimeter">#000000</color>
     <color name="colorListTitle">#5C6BC0</color>
     <color name="edittext_background">#FFFFFF</color>
+    <color name="indigo">#3F51B5</color>
+    <color name="pink">#EC407A</color>
 </resources>
