--- a/app/src/main/res/layout/website_list_fragment.xml
+++ b/app/src/main/res/layout/website_list_fragment.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
+<layout xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <data >
@@ -7,26 +7,55 @@
             name="model"
             type="com.codezilla.bookmarkreader.weblist.WebListViewModel">
         </variable>
+        <variable
+            name="handler"
+            type="com.codezilla.bookmarkreader.weblist.WeblistViewHandler"/>
         <import type="android.view.View"/>
     </data>
-<LinearLayout
+<android.support.constraint.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-    <ProgressBar
-        android:theme="@style/LinearProgress"
-        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-        android:layout_width="match_parent"
+    <FrameLayout
+        android:id="@+id/progressView"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:indeterminate="true"
-        android:layout_marginTop="-7dp"
-        android:visibility="@{model.isBusy ? View.VISIBLE:View.GONE}"
-        />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent">
+        <ProgressBar
+            android:theme="@style/LinearProgress"
+            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="-7dp"
+            android:layout_marginTop="-7dp"
+            android:layout_gravity="center"
+            android:indeterminate="true"
+            android:visibility="@{model.isBusy ? View.VISIBLE:View.GONE}"
+            />
+    </FrameLayout>
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/web_site_list_fragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/colorPrimary">
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/progressView"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent">
     </android.support.v7.widget.RecyclerView>
-</LinearLayout>
+    
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab_add"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:src="@drawable/ic_add_black_24dp"
+        android:layout_marginRight="40dp"
+        android:layout_marginBottom="40dp"
+        android:onClick="@{handler.onAddnew}"
+        />
+</android.support.constraint.ConstraintLayout>
     </layout>
