--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <declare-styleable name="ImageView">
+    <declare-styleable name="customAttrs">
         <attr name="imageUrl" format="string" />
+        <attr name="webContent" format="string" />
     </declare-styleable>
 </resources>
