--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,6 +4,7 @@
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorAccent">@color/indigo</item>
     </style>
     <style name="settings_user_name">
         <item name="android:textColor">@color/lightText</item>
@@ -12,6 +13,10 @@
         <item name="android:typeface">serif</item>
     </style>
     <style name="LinearProgress" parent="Theme.AppCompat.Light">
+        <item name="colorAccent">@color/indigo</item>
+        <item name="android:progressBackgroundTint">@color/pink</item>
+    </style>
+    <style name="fab">
         <item name="colorAccent">@color/indigo</item>
         <item name="android:progressBackgroundTint">@color/pink</item>
     </style>
