--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -35,9 +35,14 @@
                 style="@style/settings_user_name"
                 />
         </LinearLayout>
-        <TextView
-            android:id="@+id/settings_text_view" android:text="@{model.name}"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            app:menuitems="@{model.menuItems}"
+            android:orientation="vertical"
+            android:divider="?android:dividerHorizontal"
+            android:showDividers="end|middle"
+            >
+        </LinearLayout>
     </LinearLayout>
 </layout>
