--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,5 @@
     <dimen name="settings_horizontal_margin">10dp</dimen>
     <dimen name="settings_vertical_margin">5dp</dimen>
     <dimen name="login_text_input_height">35dp</dimen>
+    <dimen name="menu_item_text_size">15sp</dimen>
 </resources>
