--- a/app/src/main/res/layout/row_data_view.xml
+++ b/app/src/main/res/layout/row_data_view.xml
@@ -31,14 +31,15 @@
             android:id="@+id/guidelineHorizontal"
             app:layout_constraintGuide_begin="10dp"
             android:orientation="horizontal" />
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/thumbnail"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:scaleType="fitCenter"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             app:layout_constraintTop_toTopOf="@id/guidelineHorizontal"
             app:layout_constraintLeft_toRightOf="@id/guideline"
             app:imageUrl="@{rowData.faviconUrl}"
+            app:civ_border_width="3px"
+            app:civ_border_color="@color/colorImageBorder"
             />
         <TextView
             android:id="@+id/title"
