Fix: webview url forwarding for article detail view fixed

--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -3,6 +3,7 @@
     <declare-styleable name="customAttrs">
         <attr name="imageUrl" format="string" />
         <attr name="webContent" format="string" />
+        <attr name="base_url" format="string" />
         <attr name="menuitems" format="reference"/>
         <attr name="imgsrc" format="integer"/>
         <attr name="historyRows" format="reference"/>
