--- a/app/src/main/res/layout/fragment_article_detail.xml
+++ b/app/src/main/res/layout/fragment_article_detail.xml
@@ -29,6 +29,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:webContent="@{model.content}"
+            app:base_url="@{model.url}"
             >
         </WebView>
     </LinearLayout>
