Download page added for manual downloading

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,5 @@
     <dimen name="settings_vertical_margin">5dp</dimen>
     <dimen name="login_text_input_height">35dp</dimen>
     <dimen name="menu_item_text_size">15sp</dimen>
+    <dimen name="arc_bottom_large">25sp</dimen>
 </resources>
