--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,5 +19,5 @@
     <color name="menu_item_selected">#cccccc</color>
     <color name="matte_green">#a5d6a7</color>
     <color name="matte_yellow">#ffe082</color>
-    <color name="matte_red">#ff8a65</color>
+    <color name="matte_red">#EF5350</color>
 </resources>
