--- a/app/src/main/res/layout/sidemenu_navigation_item.xml
+++ b/app/src/main/res/layout/sidemenu_navigation_item.xml
@@ -14,15 +14,16 @@
         android:onClick="@{item::selected}"
         >
         <ImageView
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
             android:src="@drawable/ic_home"
             app:imgsc="@{item.icon}"
+            android:layout_marginLeft="@dimen/menu_margin"
             android:layout_gravity="center"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
+            android:layout_marginLeft="@dimen/menu_margin"
             android:text="@{item.name}"
             android:layout_gravity="center"
             android:textSize="@dimen/menu_item_text_size"
