--- a/app/src/main/res/layout/website_list_fragment.xml
+++ b/app/src/main/res/layout/website_list_fragment.xml
@@ -36,6 +36,27 @@
             />
     </FrameLayout>
 
+    <ImageView
+        android:visibility="@{model.isCompleted ? View.VISIBLE : View.GONE}"
+        android:id="@+id/img_double_tick"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:src="@drawable/double_tick_indicator"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:visibility="@{model.isCompleted ? View.VISIBLE : View.GONE}"
+        android:id="@+id/txtRead"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="@string/nothing_to_read"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/img_double_tick" />
     <android.support.v7.widget.RecyclerView
         android:id="@+id/web_site_list_fragment"
         android:layout_width="0dp"
