--- a/app/src/main/res/layout/row_data_view.xml
+++ b/app/src/main/res/layout/row_data_view.xml
@@ -2,12 +2,8 @@
 <layout>
     <data>
         <variable
-            name="rowData"
+            name="model"
             type="com.codezilla.bookmarkreader.weblist.WebListRowModel">
-        </variable>
-        <variable
-            name="handler"
-            type="com.codezilla.bookmarkreader.weblist.WeblistViewHandler">
         </variable>
     </data>
     <android.support.constraint.ConstraintLayout
@@ -17,7 +13,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/container"
         android:background="#FFFFFF"
-        android:onClick="@{()->handler.onItemSelected(rowData)}"
+        android:onClick="@{()->model.onItemSelected()}"
         >
         <android.support.constraint.Guideline
             android:layout_width="match_parent"
@@ -37,7 +33,7 @@
             android:layout_height="40dp"
             app:layout_constraintTop_toTopOf="@id/guidelineHorizontal"
             app:layout_constraintLeft_toRightOf="@id/guideline"
-            app:imageUrl="@{rowData.faviconUrl}"
+            app:imageUrl="@{model.faviconUrl}"
             app:civ_border_width="3px"
             app:civ_border_color="@color/colorImageBorder"
             />
@@ -48,7 +44,7 @@
             app:layout_constraintLeft_toRightOf="@id/thumbnail"
             app:layout_constraintTop_toTopOf="@id/thumbnail"
             app:layout_constraintRight_toRightOf="parent"
-            android:text="@{rowData.title}"
+            android:text="@{model.title}"
             android:textColor="@color/colorListTitle"
             android:textSize="15sp"
             android:layout_marginLeft="10dp"
@@ -58,7 +54,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:minHeight="35dp"
-            android:text="@{rowData.description == null ?  @string/not_evaluated:rowData.description}"
+            android:text="@{model.description == null ?  @string/not_evaluated:model.description}"
             app:layout_constraintLeft_toLeftOf="@id/title"
             app:layout_constraintTop_toBottomOf="@id/title"
             app:layout_constraintRight_toRightOf="@id/title"
@@ -70,7 +66,7 @@
             android:id="@+id/date"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="@{rowData.changeDate}"
+            android:text="@{model.changeDate}"
             android:textSize="10sp"
             app:layout_constraintLeft_toLeftOf="@id/thumbnail"
             app:layout_constraintRight_toRightOf="@id/thumbnail"
