--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
@@ -8,4 +8,10 @@
     <dimen name="menu_item_text_size">15sp</dimen>
     <dimen name="arc_bottom_large">25sp</dimen>
     <dimen name="menu_margin">10dp</dimen>
+    <dimen name="fab_width">56dp</dimen>
+    <dimen name="fab_margin">20dp</dimen>
+    <dimen name="fab_small_height">40dp</dimen>
+    <dimen name="fab_menu_margin">10dp</dimen>
+    <dimen name="design_fab_image_size" tools:override="true">36dp</dimen>
+    <dimen name="fab_text_width">50dp</dimen>
 </resources>
