--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,4 +14,5 @@
     <dimen name="fab_menu_margin">10dp</dimen>
     <dimen name="design_fab_image_size" tools:override="true">36dp</dimen>
     <dimen name="fab_text_width">50dp</dimen>
+    <dimen name="arc_land_small_height">85dp</dimen>
 </resources>
