--- a/app/src/main/res/layout/fragment_article_detail.xml
+++ b/app/src/main/res/layout/fragment_article_detail.xml
@@ -34,14 +34,18 @@
             >
         </WebView>
         <ScrollView
+            android:id="@+id/article_textview_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:visibility="@{model.isShowingHtml ? View.GONE : View.VISIBLE}">
+            android:visibility="@{model.isShowingHtml ? View.GONE : View.VISIBLE}"
+            android:padding="2dp"
+            >
             <TextView
                 android:id="@+id/article_textview"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@{model.rawContent}"
+                android:textSize="@dimen/article_text_size"
                 />
         </ScrollView>
     </LinearLayout>
