Squashed commit of the following:
commit 709099c65da0aefc36c65e02a8dda3ab4c8e965b
Author: Davut Ozcan <davut.ozcan@ericsson.com>
Date:   Mon Jun 4 23:42:16 2018 +0300

    history view implementation completed draft 1

commit effcc64016c0b1c711ea135c6d1b48d057759927
Author: Davut Ozcan <davut.ozcan@ericsson.com>
Date:   Mon Jun 4 22:57:20 2018 +0300

    Sample websites added

commit 6028e8a7cff716b162f238cee6c6edc2db1b588a
Author: Davut Ozcan <davut.ozcan@ericsson.com>
Date:   Tue May 29 00:17:47 2018 +0300

    entity updated

--- a/app/src/main/res/layout/history_row_view.xml
+++ b/app/src/main/res/layout/history_row_view.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
     <data>
         <variable
             name="model"
@@ -10,18 +11,25 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:minHeight="50dp"
         app:background_color="@{model.color}">
         <TextView
+            android:paddingTop="3dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="10sp"
             android:text="@{model.date}"
+            tools:text="2015.10.10 12.12.12"
             />
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@{model.text}"
             android:textSize="15sp"
+            android:lines="2"
+            android:ellipsize="end"
+            tools:text="www.someverylognurlshouldbehereithink.com"
+            android:paddingBottom="3dp"
             />
     </LinearLayout>
 </layout>
